Navbar logo changes in all pages

--- a/Contactuspage.html
+++ b/Contactuspage.html
@@ -14,7 +14,7 @@
     <section>
         <nav>
             <ul class="navbar">
-                <li><a class="first" href="project.html"><img class="logo" src="logo.png" height="30" width="175"></a></li> (Initial Commit)
+                <li><a class="first" href="project.html"><img class="logo" src="logo.png" height="30" width="175"></a></li>
                 <li><a href="project.html" class="colorhome">Home<span class="one">/</span></a></li>
                 <li><a href="speakerpage.html">Speakers<span>/</span></a></li>
                 <li><a href="aboutuspage.html">About<span>/</span></a></li>
